<resources>
    <string name="app_name">E-Vote HUB</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login Here</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="full_">Full Name</string>
    <string name="vote">Vote</string>
    <string name="or_login">Already have an account?<u>Login</u></string>
    <string name="or_signup">Create a new account<u>Signup</u></string>
    <string name="category"><u>Select Category</u></string>

</resources>