<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.example.Voting_APP.login">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/MidnightBlue"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:paddingRight="20dp"
        android:fontFamily="@font/black_italic"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:background="@drawable/circle_back"
        android:drawableEnd="@drawable/baseline_person_24"
        android:inputType="text"
        android:hint="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:paddingRight="20dp"
        android:fontFamily="@font/black_italic"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/baseline_lock_24"
        android:textAlignment="center"
        android:background="@drawable/circle_back"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="70dp"
        />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/MidnightBlue"
            android:text="Login"
            android:textColor="@color/AliceBlue"
            android:fontFamily="@font/roboto_bold"
            android:layout_below="@id/password"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"

            />

    <TextView
        android:id="@+id/or_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_signup"
        android:layout_below="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/AliceBlue"
        >

    </TextView>

</LinearLayout>